Fixed footer overlapping content on project page.

--- a/Portfolio/ClientApp/scss/project.scss
+++ b/Portfolio/ClientApp/scss/project.scss
@@ -143,8 +143,8 @@
     }
 
     .project-title-section {
-        height: 100%;
-        max-height: 150px;
+        height: 150px;
+        //max-height: 150px;
 
         h1 {
             margin: 0px;
